# agnocast

./: .clang-format  .clang-tidy  .cppcheck_suppressions  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  agnocast_node_interface_comparison.md  agnocast_node_interface_comparison_en.md  agnocast_node_rcl_reference.claude  agnocast_sample.yaml  caret_demos_take_added.yaml  cppcheck-report.txt  debug_caret.ipynb  design_choice.md  docker-compose.yml  docker-entrypoint.sh  filter_topics.yaml  my_allowed_topics.txt  my_allowed_topics.yaml  parameter.claude  test.yaml  test_results_ros2_to_agnocast.txt  test_results_with_ros2sub_v10.txt  trace_point_debug.launch.xml
agnocast_kmod/: .agnocast_main.o.d  .gitignore  CMakeLists.txt  Makefile  agnocast.c  agnocast.h  agnocast_kunit_main.c  agnocast_main.c  agnocast_memory_allocator.c  agnocast_memory_allocator.h  dkms.conf  memory_allocator.c  memory_allocator.h
agnocast_kmod/agnocast_kunit/: .agnocast_kunit_add_publisher.o.d  .agnocast_kunit_add_subscriber.o.d  .agnocast_kunit_receive_msg.o.d  .agnocast_kunit_subscriber_add.o.d  .agnocast_kunit_take_msg.o.d  agnocast_kunit_add_bridge.c  agnocast_kunit_add_bridge.h  agnocast_kunit_add_process.c  agnocast_kunit_add_process.h  agnocast_kunit_add_publisher.c  agnocast_kunit_add_publisher.h  agnocast_kunit_add_subcriber.h  agnocast_kunit_add_subscriber.c  agnocast_kunit_add_subscriber.h  agnocast_kunit_decrement_rc.c  agnocast_kunit_decrement_rc.h  agnocast_kunit_do_exit.c  agnocast_kunit_do_exit.h  agnocast_kunit_get_active_proc_num.c  agnocast_kunit_get_active_proc_num.h  agnocast_kunit_get_active_process_num.c  agnocast_kunit_get_active_process_num.h  agnocast_kunit_get_ext_publisher_num.c  agnocast_kunit_get_ext_publisher_num.h  agnocast_kunit_get_ext_subscriber_num.c  agnocast_kunit_get_ext_subscriber_num.h  agnocast_kunit_get_filtered_publisher_num.c  agnocast_kunit_get_filtered_publisher_num.h  agnocast_kunit_get_filtered_subscriber_num.c  agnocast_kunit_get_filtered_subscriber_num.h  agnocast_kunit_get_new_shm.c  agnocast_kunit_get_new_shm.h  agnocast_kunit_get_node_publisher_topics.c  agnocast_kunit_get_node_publisher_topics.h  agnocast_kunit_get_node_subscriber_topics.c  agnocast_kunit_get_node_subscriber_topics.h  agnocast_kunit_get_process_num.c  agnocast_kunit_get_publisher_num.c  agnocast_kunit_get_publisher_num.h  agnocast_kunit_get_publisher_qos.c  (+40 more)
agnocast_kmod/debian/: changelog  control  copyright  debhelper-build-stamp  postinst  rules
kmod/: .gitignore  Makefile  agnocast.c  agnocast.h  agnocast_kunit.c  agnocast_kunit_main.c  main.cpp  memory_allocator.c  memory_allocator.h  package.xml
kmod/agnocast_kunit/: agnocast_kunit_decrement_rc.h  agnocast_kunit_get_subscriber_num.c  agnocast_kunit_get_subscriber_num.h  agnocast_kunit_get_topic_list.h  agnocast_kunit_increment_rc.c  agnocast_kunit_increment_rc.h  agnocast_kunit_new_shm.c  agnocast_kunit_new_shm.h  agnocast_kunit_publish_msg.c  agnocast_kunit_publish_msg.h  agnocast_kunit_publisher_add.c  agnocast_kunit_publisher_add.h  agnocast_kunit_receive_msg.h  agnocast_kunit_subscriber_add.c  agnocast_kunit_subscriber_add.h  agnocast_kunit_take_msg.h
ros2agnocast/: package.xml  setup.py
ros2agnocast/ros2agnocast/verb/: list_agnocast.py  node_info_agnocast.py  topic_info_agnocast.py
src/agnocast_bridge/: CMakeLists.txt  package.xml
src/agnocast_bridge/launch/: bridge.launch.xml
src/agnocast_bridge/src/: bridge_node.cpp
src/agnocast_components/: CHANGELOG.rst  CMakeLists.txt  agnocast_components-extras.cmake.in  node_main.cpp.in  node_main_agnocast_only.cpp.in  package.xml
src/agnocast_components/cmake/: agnocast_components_package_hook.cmake  agnocast_components_register_node.cmake
src/agnocast_components/src/: agnocast_component_container_cie.cpp  agnocast_component_container_mt.cpp  node_main.cpp.in  node_main_agnocast_only.cpp.in
src/agnocast_heaphook/: CMakeLists.txt  package.xml
src/agnocast_heaphook/include/: preloaded.hpp
src/agnocast_heaphook/src/: lib.rs  preloaded.cpp  util.cpp
src/agnocast_heaphook/test/: test_util.cpp
src/agnocast_heaphook_rust/: Cargo.toml  build.rs  output.txt
src/agnocast_heaphook_rust/src/: lib.rs
src/agnocast_ioctl_wrapper/: CHANGELOG.rst  CMakeLists.txt  node_info.cpp  package.xml  topic_list.c  topic_list.cpp
src/agnocast_ioctl_wrapper/src/: agnocast_ioctl.hpp  node_info.cpp  topic_info.cpp  topic_list.cpp
src/agnocast_sample_application/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/agnocast_sample_application/launch/: agnocast_subscriber_my_topic_3.launch.xml  callback_group_test.launch.xml  cie_listener.launch.xml  cie_listener_copy.launch.xml  cie_talker.launch.xml  client.launch.xml  listener.launch.xml  listener_2.launch.xml  listener_copy.launch.xml  no_rclcpp_client.launch.xml  no_rclcpp_composable_listener.launch.xml  no_rclcpp_listener.launch.xml  no_rclcpp_pubsub.launch.xml  no_rclcpp_server.launch.xml  no_rclcpp_take_listener.launch.xml  no_rclcpp_talker.launch.xml  no_rclcpp_tf2_test.launch.xml  ros2_listener.launch.xml  ros2_talker.launch.xml  server.launch.xml  take_subscriber_my_topic_2.launch.xml  talker.launch.xml  test_default.launch.xml  test_namespace.launch.xml  test_parameters.launch.xml  test_remapping.launch.xml
src/agnocast_sample_application/src/: agnocast_subscriber_my_topic_3.cpp  callback_group_test_listener.cpp  callback_group_test_talker.cpp  cie_publisher.cpp  cie_subscriber.cpp  cie_subscriber_copy.cpp  minimal_client.cpp  minimal_publisher.cpp  minimal_ros2_publisher.cpp  minimal_ros2_subscriber.cpp  minimal_server.cpp  minimal_service.cpp  minimal_subscriber.cpp  my_topic_2_subscriber.cpp  no_rclcpp_client.cpp  no_rclcpp_composable_subscriber.cpp  (+9 more)
src/agnocast_sample_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/agnocastlib/: CHANGELOG.rst  CMakeLists.txt  bridge_messages.txt  package.xml
src/cie_thread_configurator/: CMakeLists.txt  package.xml
src/e2e_test/: CMakeLists.txt  package.xml
src/sample_application/: CMakeLists.txt  package.xml
(+506 files in other folders)
