<package format="3">
  <name>agnocast_kmod</name>
  <version>0.0.0</version>
  <description>Agnocast kernel module</description>
  <maintainer email="sykwer@gmail.com">sykwer</maintainer>
  <license>Dual BSD/GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>colcon-cmake</exec_depend>
</package>
