<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agnocast_kmod</name>
  <version>0.0.0</version>
  <description>
    The kernel module for Agnocast.
  </description>
  <maintainer email="sykwer@gmail.com">Takahiro Ishikawa-Aso</maintainer>
  <maintainer email="ryuta.kambe@tier4.jp">Ryuta Kambe</maintainer>
  <maintainer email="atsushi.yano.2@tier4.jp">Atsushi Yano</maintainer>
  <maintainer email="koichi.imai.2@tier4.jp">Koichi Imai</maintainer>
  <maintainer email="kawaguchitnon@icloud.com">Tetsuhiro Kawaguchi</maintainer>
  <license>Dual BSD/GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
