<?xml version="1.0"?>
<package format="3">
  <name>agnocast_heaphook</name>
  <version>0.0.0</version>
  <description>Agnocast Heaphook</description>
  <maintainer email="sykwer@gmail.com">sykwer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
