<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agnocast_ioctl_wrapper</name>
  <version>0.0.0</version>
  <description>
    The wrapper of ioctl for command line tool extension for Agnocast.
  </description>
  <maintainer email="ryuta.kambe@tier4.jp">Ryuta Kambe</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcl_action</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
