<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>e2e_test</name>
  <version>0.0.0</version>
  <description>E2E Test</description>
  <maintainer email="atsushi.yano.2@tier4.jp">atsuhi421</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <depend>agnocastlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
